============================
Change log for gocept.jsform
============================

1.2 (unreleased)
================

- Add textarea template.

- Added the concept of required fields which cannot be saved when blank.

- More Bootstrap 3 compatibility.

- Simplified HTML mark-up of form elements.


1.1 (2014-04-07)
================

- Propagate save message of server using ``after-save`` trigger.

- Added infrastructure for displaying and clearing status messages, use it for
  announcing HTTP faults during AJAX calls.

- Display and clear field-related errors both at the widget and via status
  messages.

- When saving data, count anything but a JSON response with a status value of
  "success" as an error. Give up completely after an incomprehensible
  response, retry on connection errors either after the next successful server
  access for any other field, or when requested by a call to ``retry()``.

- Added an API method ``save_remaining()`` that causes any fields to be saved
  that have not been modified so far. While this should only save the initial
  values loaded from the server, it is useful to apply the same validation and
  error handling to all fields.

- Added an API method ``when_saved(retry)`` that returns a promise that
  aggregates any pending and completed save calls, either propagating the
  retry behaviour of single fields (the default) or failing on server errors.

- Provide a visual clue and status message while saving a field.

- Some refactoring to improve code readability.

- Made code pass jshint check.

- Made default and currently not overrideable status message behaviour
  compatible to bootstrap 3

- Properly unsubscribe change handlers when updating fields.

- Added simple localization.


1.0 (2013-12-13)
================

- Remove console calls as they are not understood by all browsers.


0.8 (2013-12-10)
================

- Fixed: jsform did not render in IE8 if form template started with line break.


0.7 (2013-12-03)